--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "templates/react-component/{{hyphenate name}}/{{hyphenate name}}.tsx.tpl"],
     "exclude": ["node_modules"]
 }
