--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "next": "13.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "tree-sitter-cli": "^0.20.8",
         "typescript": "5.0.4"
     },
     "devDependencies": {
